clang/test/BSC/Negative/OwnedStruct/memoryleak/destructor/desturctor-param.cbs
// RUN: %clang_cc1 -verify %s
owned struct A {
    public:
    int * owned a;
    ~A(A this) {
    } // expected-error {{destructor for`owned struct A` incorrect, this.a is of owned type and needs to be handled manually}}
};
int main() {
    int local = 1;
    A a ={ .a = (int * owned)&local };
    return 0;
}
